Fixed details modal full responsiveness. Fixed corpus data selection dropdown width on mobile.

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -257,3 +257,10 @@ nav a.router-link-exact-active {
 .pre-line {
   white-space: pre-line;
 }
+
+@media screen and (max-width: 768px) {
+  .modal-full {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
